--- a/package.json
+++ b/package.json
@@ -1,1 +1,39 @@
-{"name":"health_check","version":"0.0.1","private":true,"scripts":{"start":"node node_modules/react-native/local-cli/cli.js start"},"dependencies":{"@expo/vector-icons":"^13.0.0","@react-native-async-storage/async-storage":"^1.17.12","@react-native-community/datetimepicker":"^7.0.0","@react-navigation/bottom-tabs":"^6.5.5","@react-navigation/native":"^6.1.4","@react-navigation/native-stack":"^6.9.10","@reduxjs/toolkit":"^1.9.3","@rneui/themed":"^4.0.0-rc.7","expo-cli":"^6.3.1","expo-status-bar":"^1.4.2","radio-buttons-react-native":"^1.0.4","react":"^18.2.0","react-native":"0.71.3","react-native-date-picker":"^4.2.9","react-native-radio-check":"^1.0.0","react-native-sqlite-storage":"^6.0.1","react-navigation":"^4.4.4","react-redux":"^8.0.5","redux":"^4.2.1"}}
+{
+  "name": "health_check",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "expo": "^48.0.20",
+    "expo-status-bar": "~1.4.4",
+    "radio-buttons-react-native": "^1.0.4",
+    "react": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.9",
+    "react-native-radio-check": "^1.0.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "^0.19.6",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "victory": "^36.6.11"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1"
+  }
+}
